<resources>
    <!-- STRINGS GENERALES APP   -->
    <string name="app_name">Forvago: Guía de Viajes</string>
    <string name="logo_forvago">LogoForvago</string>
    <!-- FIN STRINGS GENERALES APP   -->

    <!-- STRINGS PANTALLA DETALLE HOTEL  -->
    <string name="detalle_de_hotel_descripcion">Descripción</string>
    <string name="detalle_de_hotel_datos_hotel">Datos Hotel</string>
    <string name="detalle_de_hotel_ubicacion">Ubicación:</string>
    <string name="detalle_de_hotel_estrellas">Estrellas:</string>
    <string name="detalle_de_hotel_contacto">Contacto:</string>
    <string name="detalle_de_hotel_tipoAlojamiento">Tipo alojamiento:</string>
    <string name="detalle_de_hotel_video_hotel">Video Hotel</string>
    <string name="detalle_de_hotel_servicios">Servicios</string>
    <string name="detalle_de_hotel_tarifa">Tarifa:</string>
    <string name="detalle_de_hotel_ver_web">Ver web del Hotel</string>
    <string name="detalle_de_hotel_volver_listado">Volver al listado</string>
    <!-- FIN STRINGS PANTALLA DETALLE HOTEL  -->

    <!-- STRINGS MAIN PAGE -->
    <string name="main_page_descripcion">DESCRIPCIÓN</string>
    <string name="main_page_descripcion_forvago">Forvago es una app diseñada para viajeros que buscan experiencias personalizadas. Ofrece guías actualizadas sobre destinos, alojamientos y actividades, permitiendo explorar recomendaciones locales, reseñas de usuarios y sugerencias basadas en los intereses del viajero.</string>
    <string name="main_page_recomendaciones">RECOMENDACIONES DE VIAJE</string>
    <string name="main_page_recomendacion_1_title">Investiga a fondo el destino</string>
    <string name="main_page_recomendacion_1">Antes de emprender cualquier viaje, es crucial conocer las costumbres, clima y eventos locales. Esto no solo te permite disfrutar mejor de la experiencia, sino también evitar malentendidos culturales y problemas logísticos.</string>
    <string name="main_page_recomendacion_2_title">Viaja ligero pero bien preparado</string>
    <string name="main_page_recomendacion_2">Llevar lo esencial te ahorra tiempo y estrés, especialmente si usas transporte público o te mueves entre varios destinos. Un buen botiquín, dispositivos electrónicos cargados y adaptadores de corriente son indispensables.</string>
    <string name="main_page_recomendacion_3_title">Sé flexible y abierto a cambios</string>
    <string name="main_page_recomendacion_3">Los mejores momentos de los viajes suelen ocurrir cuando te sales del itinerario planificado. Mantente abierto a recomendaciones locales o cambios inesperados en tus planes, que podrían llevarte a descubrir algo que no esperabas.</string>
    <string name="main_page_lista_de_hoteles">LISTA DE HOTELES</string>
    <string name="main_page_descripcion_hoteles">Descripción</string>
    <string name="main_page_ver_hotel">Ver hotel...</string>
    <string name="main_page_ver_listado_completo">Ver listado completo</string>
    <!-- FIN STRINGS MAIN PAGE -->

    <!-- STRINGS REGISTER PAGE -->
    <string name="register_add_user">Agregar Usuario</string>
    <string name="register_input_name">Nombre</string>
    <string name="register_placeholder_name">Ingresa tu nombre</string>
    <string name="register_input_lastname">Apellido</string>
    <string name="register_placeholder_lastname">Ingresa tu apellido</string>
    <string name="register_input_age">Edad</string>
    <string name="register_placeholder_age">Ingresa tu edad</string>
    <string name="register_input_email">Correo electrónico</string>
    <string name="register_placeholder_email">Ingresa tu correo</string>
    <string name="register_input_favorite">Destinos favoritos</string>
    <string name="register_placeholder_favorite">Escribe los destinos favoritos que has visitado o deseas visitar</string>
    <string name="register_input_image">URL de imagen de perfil</string>
    <string name="register_placeholder_image">Ingresa la URL de tu imagen de perfil</string>
    <string name="register_input_languages">Idiomas</string>
    <string name="register_placeholder_languages">Ingresa los idiomas que hablas</string>
    <string name="register_input_special">Intereses Especiales</string>
    <string name="register_placeholder_special">Escribe tus intereses especiales</string>
    <string name="register_button_save">Guardar</string>
    <!-- FIN STRINGS REGISTER PAGE -->

    <!-- STRINGS PROFILE PAGE   -->
    <string name="profile_no_info_text">NO HAY INFORMACIÓN DEL PERFIL</string>
    <string name="profile_button_no_info_text">Agregar información</string>
    <string name="profile_informacion_usuario_text">Información de Usuario</string>
    <string name="profile_name_text">Nombre:</string>
    <string name="profile_lastname_text">Apellido:</string>
    <string name="profile_email_text">Correo:</string>
    <string name="profile_age_text">Edad:</string>
    <string name="profile_preferences_text">Preferencias de Viaje</string>
    <string name="profile_favorites_text">Destinos favoritos:</string>
    <string name="profile_languages_text">Idiomas:</string>
    <string name="profile_special_text">Intereses especiales:</string>
    <string name="profile_button_home_text">Volver al Inicio</string>
    <!-- END STRINGS PROFILE PAGE   -->
</resources>